--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -12,5 +12,20 @@
 	"Exact_description": "Exact is a game where the objective is to hit 100 or below while scoring the most points. Players earn points based on the following criteria: Achieving exactly 100 meters awards 5 points, hitting multiples of ten earns 3 points, numbers with repeating digits score 2 points. Additionally, hitting the same row doubles the points earned. However, any other number exceeding 100 or falling below 5 results in a deduction of 1 point. Every other number between 5 and 100 scores 1 point. The challenge lies in balancing accuracy with maximizing points to achieve the highest score.",
 	"Exact_picture_alt": "4Winning Red Team has won",
 	"Precision_description": "Precision is a game where the objective is to get as close to the targets as possible. For every meter you miss the target, you will receive a deduction of one point. The winner of the game is the player with the highest points at the end. The game concludes until only one player has points remaining. You can observe the distance you need to shoot and the current team, along with the remaining points for each team.",
-	"Precision_picture_alt": "Precision game"
+	"Precision_picture_alt": "Precision game",
+	"imprint_heading": "Imprint",
+	"responsible_according_tmg": "According to § 5 TMG (German Telemedia Law)",
+	"contact": "Contact",
+	"responsible_according_rstv": "Responsible for the content according to § 55 Abs. 2 RStV",
+	"liability_for_content": "Liability for content",
+	"content_for_liability_for_content": "As a service provider, we are responsible for our own content on these pages according to Section 7, Paragraph 1 of the German Telemedia Act (TMG). According to §§ 8 to 10 TMG, however, we as a service provider are not obliged to monitor transmitted or stored third-party information or to investigate circumstances that indicate illegal activity.",
+	"content_for_liability_for_content_2": "Obligations to remove or block the use of information according to general laws remain unaffected. However, liability in this regard is only possible from the point in time at which knowledge of a specific infringement of the law is known. As soon as we become aware of any violations of the law, we will remove this content immediately.",
+	"liability_for_links": "Liability for links",
+	"content_for_liability_for_links": "Our offer contains links to external websites over which we have no influence. Therefore we cannot assume any liability for this external content. The respective provider or operator of the pages is always responsible for the content of the linked pages. The linked pages were checked for possible legal violations at the time of linking. Illegal content was not recognizable at the time of linking.",
+	"content_for_liability_for_links_2": "However, a permanent control of the content of the linked pages is not reasonable without concrete evidence of an infringement. As soon as we become aware of legal violations, we will remove such links immediately.",
+	"copyright_imprint": "Copyright",
+	"content_for_copyright_imprint": "The content and works on these pages created by the site operators are subject to German copyright law. The duplication, editing, distribution and any kind of exploitation outside the limits of copyright require the written consent of the respective author or creator. Downloads and copies of this site are only permitted for private, non-commercial use.",
+	"content_for_copyright_imprint_2": "Insofar as the content on this site was not created by the operator, the copyrights of third parties are observed. In particular contents of third parties are marked as such. Should you nevertheless become aware of a copyright infringement, we ask that you inform us accordingly. As soon as we become aware of legal violations, we will remove such content immediately.",
+	"license": "All Rights Reserved",
+	"country": "Germany"
 }
