Modify FAQ Question 2

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,42 +1,44 @@
 {
-  "ultimate_destination": "Your ultimate destination for challenging and immersive golf experiences.",
-  "sign_up_button_homepage": "Sign Up for RealGolf.Games",
-  "features_heading_homepage": "Features",
-  "what_our_user_say": "What our Users say",
-  "user_quote": "I just signed up for RealGolf.Games, and I can already tell it's going to revolutionize how I enjoy practicing on the range. It's like unlocking a whole new level of fun!",
-  "first_user": "first user",
-  "ready_to_take_your_golf_game": "Ready to take your golf game to the next level?",
-  "challenge_during_training": "Whether you want to have a challange during training or just want to be more motivated going onto the Range and hit some Balls, RealGolf.Games is your place to go.",
-  "4Winning_description": "In 4Winning, the objective is to strategically connect four pieces in a row. Our version of the game features a larger board than the standard 4x4 layout, with 8 columns and 9 rows. The additional columns on each side introduce a challenge: players must hit a specific distance within the lateral deviation. This aspect becomes more pronounced in Silver Mode and above, adding complexity and requiring players to carefully consider their moves.",
-  "4Winning_picture_alt": "All teams are tie in Exact",
-  "Exact_description": "Exact is a game where the objective is to hit 100 or below while scoring the most points. Players earn points based on the following criteria: Achieving exactly 100 meters awards 5 points, hitting multiples of ten earns 3 points, numbers with repeating digits score 2 points. Additionally, hitting the same row doubles the points earned. However, any other number exceeding 100 or falling below 5 results in a deduction of 1 point. Every other number between 5 and 100 scores 1 point. The challenge lies in balancing accuracy with maximizing points to achieve the highest score.",
-  "Exact_picture_alt": "4Winning Red Team has won",
-  "Precision_description": "Precision is a game where the objective is to get as close to the targets as possible. For every meter you miss the target, you will receive a deduction of one point. The winner of the game is the player with the highest points at the end. The game concludes until only one player has points remaining. You can observe the distance you need to shoot and the current team, along with the remaining points for each team.",
-  "Precision_picture_alt": "Precision game",
-  "imprint_heading": "Imprint",
-  "responsible_according_tmg": "According to § 5 TMG (German Telemedia Law)",
-  "contact": "Contact",
-  "responsible_according_rstv": "Responsible for the content according to § 55 Abs. 2 RStV",
-  "liability_for_content": "Liability for content",
-  "content_for_liability_for_content": "As a service provider, we are responsible for our own content on these pages according to Section 7, Paragraph 1 of the German Telemedia Act (TMG). According to §§ 8 to 10 TMG, however, we as a service provider are not obliged to monitor transmitted or stored third-party information or to investigate circumstances that indicate illegal activity.",
-  "content_for_liability_for_content_2": "Obligations to remove or block the use of information according to general laws remain unaffected. However, liability in this regard is only possible from the point in time at which knowledge of a specific infringement of the law is known. As soon as we become aware of any violations of the law, we will remove this content immediately.",
-  "liability_for_links": "Liability for links",
-  "content_for_liability_for_links": "Our offer contains links to external websites over which we have no influence. Therefore we cannot assume any liability for this external content. The respective provider or operator of the pages is always responsible for the content of the linked pages. The linked pages were checked for possible legal violations at the time of linking. Illegal content was not recognizable at the time of linking.",
-  "content_for_liability_for_links_2": "However, a permanent control of the content of the linked pages is not reasonable without concrete evidence of an infringement. As soon as we become aware of legal violations, we will remove such links immediately.",
-  "copyright_imprint": "Copyright",
-  "content_for_copyright_imprint": "The content and works on these pages created by the site operators are subject to German copyright law. The duplication, editing, distribution and any kind of exploitation outside the limits of copyright require the written consent of the respective author or creator. Downloads and copies of this site are only permitted for private, non-commercial use.",
-  "content_for_copyright_imprint_2": "Insofar as the content on this site was not created by the operator, the copyrights of third parties are observed. In particular contents of third parties are marked as such. Should you nevertheless become aware of a copyright infringement, we ask that you inform us accordingly. As soon as we become aware of legal violations, we will remove such content immediately.",
-  "license": "All Rights Reserved",
-  "country": "Germany",
-  "faq_question_1": "How can I create an account to play the games?",
-  "faq_answer_1_steps": "Creating an account to play Real Golf is a simple process. Follow these steps to get started:",
-  "faq_answer_1_step_1_title": "Navigate to Registration Page",
-  "faq_answer_1_step_1_description": "Go to the Register tab in the nav bar.",
-  "faq_answer_1_step_2_title": "Fill in Registration Details",
-  "faq_answer_1_step_2_description": "Enter an email, name, and password, then click on the register button.",
-  "faq_answer_1_step_3_title": "Complete Registration",
-  "faq_answer_1_step_3_description": "You will automatically be redirected to the Login tab. Log in using your email and password.",
-  "faq_answer_1_step_4_title": "Start Playing",
-  "faq_answer_1_step_4_description": "After logging in, you can play all three games and save your progress in the database.",
-  "faq_answer_1_conclusion": "By following these steps, you'll create an account that allows you to dive into the world of Real Golf and enjoy the various challenges they provide. Have fun!"
+	"ultimate_destination": "Your ultimate destination for challenging and immersive golf experiences.",
+	"sign_up_button_homepage": "Sign Up for RealGolf.Games",
+	"features_heading_homepage": "Features",
+	"what_our_user_say": "What our Users say",
+	"user_quote": "I just signed up for RealGolf.Games, and I can already tell it's going to revolutionize how I enjoy practicing on the range. It's like unlocking a whole new level of fun!",
+	"first_user": "first user",
+	"ready_to_take_your_golf_game": "Ready to take your golf game to the next level?",
+	"challenge_during_training": "Whether you want to have a challange during training or just want to be more motivated going onto the Range and hit some Balls, RealGolf.Games is your place to go.",
+	"4Winning_description": "In 4Winning, the objective is to strategically connect four pieces in a row. Our version of the game features a larger board than the standard 4x4 layout, with 8 columns and 9 rows. The additional columns on each side introduce a challenge: players must hit a specific distance within the lateral deviation. This aspect becomes more pronounced in Silver Mode and above, adding complexity and requiring players to carefully consider their moves.",
+	"4Winning_picture_alt": "All teams are tie in Exact",
+	"Exact_description": "Exact is a game where the objective is to hit 100 or below while scoring the most points. Players earn points based on the following criteria: Achieving exactly 100 meters awards 5 points, hitting multiples of ten earns 3 points, numbers with repeating digits score 2 points. Additionally, hitting the same row doubles the points earned. However, any other number exceeding 100 or falling below 5 results in a deduction of 1 point. Every other number between 5 and 100 scores 1 point. The challenge lies in balancing accuracy with maximizing points to achieve the highest score.",
+	"Exact_picture_alt": "4Winning Red Team has won",
+	"Precision_description": "Precision is a game where the objective is to get as close to the targets as possible. For every meter you miss the target, you will receive a deduction of one point. The winner of the game is the player with the highest points at the end. The game concludes until only one player has points remaining. You can observe the distance you need to shoot and the current team, along with the remaining points for each team.",
+	"Precision_picture_alt": "Precision game",
+	"imprint_heading": "Imprint",
+	"responsible_according_tmg": "According to § 5 TMG (German Telemedia Law)",
+	"contact": "Contact",
+	"responsible_according_rstv": "Responsible for the content according to § 55 Abs. 2 RStV",
+	"liability_for_content": "Liability for content",
+	"content_for_liability_for_content": "As a service provider, we are responsible for our own content on these pages according to Section 7, Paragraph 1 of the German Telemedia Act (TMG). According to §§ 8 to 10 TMG, however, we as a service provider are not obliged to monitor transmitted or stored third-party information or to investigate circumstances that indicate illegal activity.",
+	"content_for_liability_for_content_2": "Obligations to remove or block the use of information according to general laws remain unaffected. However, liability in this regard is only possible from the point in time at which knowledge of a specific infringement of the law is known. As soon as we become aware of any violations of the law, we will remove this content immediately.",
+	"liability_for_links": "Liability for links",
+	"content_for_liability_for_links": "Our offer contains links to external websites over which we have no influence. Therefore we cannot assume any liability for this external content. The respective provider or operator of the pages is always responsible for the content of the linked pages. The linked pages were checked for possible legal violations at the time of linking. Illegal content was not recognizable at the time of linking.",
+	"content_for_liability_for_links_2": "However, a permanent control of the content of the linked pages is not reasonable without concrete evidence of an infringement. As soon as we become aware of legal violations, we will remove such links immediately.",
+	"copyright_imprint": "Copyright",
+	"content_for_copyright_imprint": "The content and works on these pages created by the site operators are subject to German copyright law. The duplication, editing, distribution and any kind of exploitation outside the limits of copyright require the written consent of the respective author or creator. Downloads and copies of this site are only permitted for private, non-commercial use.",
+	"content_for_copyright_imprint_2": "Insofar as the content on this site was not created by the operator, the copyrights of third parties are observed. In particular contents of third parties are marked as such. Should you nevertheless become aware of a copyright infringement, we ask that you inform us accordingly. As soon as we become aware of legal violations, we will remove such content immediately.",
+	"license": "All Rights Reserved",
+	"country": "Germany",
+	"faq_question_1": "How can I create an account to play the games?",
+	"faq_answer_1_steps": "Creating an account to play Real Golf is a simple process. Follow these steps to get started:",
+	"faq_answer_1_step_1_title": "Navigate to Registration Page",
+	"faq_answer_1_step_1_description": "Go to the Register tab in the nav bar.",
+	"faq_answer_1_step_2_title": "Fill in Registration Details",
+	"faq_answer_1_step_2_description": "Enter an email, name, and password, then click on the register button.",
+	"faq_answer_1_step_3_title": "Complete Registration",
+	"faq_answer_1_step_3_description": "You will automatically be redirected to the Login tab. Log in using your email and password.",
+	"faq_answer_1_step_4_title": "Start Playing",
+	"faq_answer_1_step_4_description": "After logging in, you can play all three games and save your progress in the database.",
+	"faq_answer_1_conclusion": "By following these steps, you'll create an account that allows you to dive into the world of Real Golf and enjoy the various challenges they provide. Have fun!",
+	"faq_question_2_title": "Are the games free to play?",
+	"faq_answer_2_content": "Absolutely! Our games are completely free to play. All you need to do is create an account, and you'll have access to all the exciting challenges and fun that Real Golf has to offer. Get started today and enjoy the games without any cost."
 }
