--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -74,5 +74,14 @@
 	"faq_answer_10_steps": "Absolutely. We take the security and privacy of your personal information seriously. <br>Here's how we ensure your data is safe:",
 	"faq_answer_10_steps_1": "<strong>Password Protection:</strong> Your password is not stored in clear text on our servers. It's securely hashed to protect its confidentiality.",
 	"faq_answer_10_steps_2": "<strong>Limited Access:</strong> Your password and personal information are not viewable by any team member. We implement strict access controls to ensure only authorized personnel can handle sensitive data.",
-	"faq_answer_10_conclusion": "We are committed to maintaining the highest standards of security to safeguard your personal information."
+	"faq_answer_10_conclusion": "We are committed to maintaining the highest standards of security to safeguard your personal information.",
+	"download_description": "Here we will explain how to add the site as a Progressive Web App (PWA) on your device.",
+	"installation_steps_for_safari": "To install this site as a PWA on Safari for iOS:",
+	"instalation_safari_step_1": "Tap the Share icon (the square with an arrow pointing up) at the bottom of the screen.",
+	"instalation_safari_step_2": "Scroll down and tap \"Add to Home Screen\".",
+	"instalation_safari_step_3": "Confirm by tapping \"Add\".",
+	"installation_steps_for_chrome": "To install this site as a PWA on Chrome for Android:",
+	"instalation_chrome_step_1": "Tap the three-dot menu icon at the top right corner of the screen.",
+	"instalation_chrome_step_2": "Select \"Add to Home screen\" from the menu.",
+	"instalation_chrome_step_3": "Review the details and tap \"Add\"."
 }
