--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -83,6 +83,6 @@
 	"installation_steps_for_chrome": "To install this site as a PWA on Chrome for Android:",
 	"instalation_chrome_step_1": "Tap the three-dot menu icon at the top right corner of the screen.",
 	"instalation_chrome_step_2": "Select \"Add to Home screen\" from the menu.",
-	"instalation_chrome_step_3": "Review the details and tap \"Add\"."
+	"instalation_chrome_step_3": "Review the details and tap \"Add\".",
 	"faq_answer_10_conclusion": "Estamos comprometidos a manter os mais altos padrões de segurança para proteger suas informações pessoais."
 }
