--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -114,5 +114,8 @@
   "copy_successful": "Copied URL to clipboard!",
   "share_game": "Share Game",
   "open_game": "Open Game",
-  "no_games_found_for_user": "No games found for this user."
+  "no_games_found_for_user": "No games found for this user.",
+  "public_game_from": "{game_name} from {user_name}",
+  "game_not_found": "Game not found",
+  "public_game": "{game_name} saved on the {game_date}"
 }
