--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -119,5 +119,7 @@
   "game_not_found": "Game not found",
   "public_game": "{game_name} saved on the {game_date}",
   "who_user_follows": "Who {username} is Following",
-  "user_follows_no_one": "{username} is not following anyone."
+  "user_follows_no_one": "{username} is not following anyone.",
+  "users_followers": "{user_name}'s Follower",
+  "user_has_no_followers": "{user_name} has no followers."
 }
