Add Info to Crowdin

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -124,5 +124,8 @@
   "user_has_no_followers": "{user_name} has no followers.",
   "tools": "Tools",
   "tools_description": "This shows a few examples for material you can you use to determine the exact length.",
-  "any_simulator": "And any kind of simulator"
+  "any_simulator": "And any kind of simulator",
+  "info": "Info",
+  "info_text": "The games are for golfers who want to train a different way, you only need a kind of trackman or a simulator to determine the exact length. After you have determined the length with your trackman (or the like). You can click the Field with number you played or enter the number in the input Field. <br /> <b>Have fun playing!</b>",
+  "link_to_tools": "A list of some things that can be used can be found <a href=\"/dashboard/tools\">here</a>."
 }
