--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -160,5 +160,13 @@
   "two_players_description": "This version of {game_name} can be played with Two Players, Red and Blue",
   "three_players_description": "This version of {game_name} can be played with Three Players, Red, Blue and Green",
   "four_players_description": "This version of {game_name} can be played with Four Players, Red, Blue, Green and Orange",
-  "different_modis": "Here you can find the different modi you can play the Games in."
+  "different_modis": "Here you can find the different modi you can play the Games in.",
+  "archive": "Archive",
+  "total_users_games": "You have saved: {games_length} games in the database.",
+  "delete_all": "Delete All",
+  "search_for_games": "Search a game by name or date",
+  "search_games_description": "You can search by dates by the following terms: DD/MM/YYYY or just by Year, Month or Day, to get all values with this parameters",
+  "select_team": "Select a Team",
+  "all_teams": "All Teams",
+  "no_games_found": "No games found for this search."
 }
