Update total_users_games message to handle plural form

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -162,7 +162,7 @@
   "four_players_description": "This version of {game_name} can be played with Four Players, Red, Blue, Green and Orange",
   "different_modis": "Here you can find the different modi you can play the Games in.",
   "archive": "Archive",
-  "total_users_games": "You have saved: {games_length} games in the database.",
+  "total_users_games": "You have saved: {games_length, plural, =0 {games} one {1 game} other {# games}} in the database.",
   "delete_all": "Delete All",
   "search_for_games": "Search a game by name or date",
   "search_games_description": "You can search by dates by the following terms: DD/MM/YYYY or just by Year, Month or Day, to get all values with this parameters",
