--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -220,5 +220,19 @@
 	"public_games_link": "{username} has saved {games_length, plural, =0 {games} one {1 game} other {# games}}. You can find all of their games <a href=\"/{username}/games\">here</a>.",
 	"public_user_never_played_ine_player_precision": "<p>{username} has never played One Player Precision</p>",
 	"registration_date": "{username} joined RealGolf.Games on {date}.",
-	"public_user_all_time_highscore": "{username}'s all-time highscore is <b>{allTimeValue}</b>, last exceeded on {lastUpdatedDate}."
+	"public_user_all_time_highscore": "{username}'s all-time highscore is <b>{allTimeValue}</b>, last exceeded on {lastUpdatedDate}.",
+	"bio": "Bio",
+	"edit_profile": "Edit profile",
+	"un_follow": "Unfollow",
+	"follow": "Follow",
+	"achievements": "Achievements",
+	"history": "History",
+	"highlights": "Highlights",
+	"display_email_public": "Display Email Public",
+	"followers": "Followers",
+	"following": "Following",
+	"pronouns": "Pronouns",
+	"socials_one_per_line": "Socials (one per line)",
+	"edit_status": "Edit status",
+	"busy": "Busy"
 }
