Add Nav to Crowdin

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -244,5 +244,6 @@
 	"github": "GitHub",
 	"sign_in": "Sign in",
 	"internal_links": "Internal Links",
-	"external_sites": "External Sites"
+	"external_sites": "External Sites",
+	"sign_up": "Sign Up"
 }
