--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -248,5 +248,8 @@
 	"sign_up": "Sign Up",
 	"all_users": "All Users",
 	"no_user_found": "No users found.",
-	"must_be_logged_in_to_see_other_users": "You must be logged in to search for other users."
+	"must_be_logged_in_to_see_other_users": "You must be logged in to search for other users.",
+	"update_name": "Update Name",
+	"created_at": "Created at the {date}",
+	"delete_game": "Delete Game"
 }
