--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -253,5 +253,6 @@
 	"created_at": "Created at the {date}",
 	"delete_game": "Delete Game",
 	"users": "Users:",
-	"logged_in_as": "You are logged in as <b>{username}</b>"
+	"logged_in_as": "You are logged in as <b>{username}</b>",
+	"send_message": "Send message"
 }
